<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/mBaseSpeed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar_baseSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/value_baseSpeed"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_motorpid"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_mKp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar_mKp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/value_mKp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkBox_mKi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ki"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar_mKi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/value_mKi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
