<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_Kp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar_Kp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/value_Kp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_Kd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kd"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar_Kd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/value_Kd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_Ki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ki"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar_Ki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/value_Ki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_K_linelost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/K_lineLost"
            android:textAlignment="center"
            android:textStyle="italic" />

        <SeekBar
            android:id="@+id/seekbar_K_lineLost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/value_K_lineLost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_target_linepos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/target_linepos"
            android:textAlignment="center"
            android:textStyle="italic" />

        <SeekBar
            android:id="@+id/seekbar_target_linepos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/value_target_linepos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
